# ttyprland

./: CMakeLists.txt  README.md  minwl.c  start-ttyprland
impl/: CMakeLists.txt  main.c  server.c  server_graphics.c  server_input.c  server_output.c  server_protocols.c  server_scene.c
include/ttyprland/: output.h  server.h  toplevel.h
